// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge.Label/> should render correctly with color danger 1`] = `
<span
  aria-label="danger Badge"
  class="rounded-[50%] inline-flex items-center justify-center font-bold text-solid-slate-50 text-center bg-solid-green-700 h-1200 min-w-[24px] text-body-sm"
  color="danger"
/>
`;

exports[`<Badge.Label/> should render correctly with color success 1`] = `
<span
  aria-label="success Badge"
  class="rounded-[50%] inline-flex items-center justify-center font-bold text-solid-slate-50 text-center bg-solid-green-700 h-1200 min-w-[24px] text-body-sm"
  color="success"
/>
`;

exports[`<Badge.Label/> should render correctly with color warning 1`] = `
<span
  aria-label="warning Badge"
  class="rounded-[50%] inline-flex items-center justify-center font-bold text-solid-slate-50 text-center bg-solid-green-700 h-1200 min-w-[24px] text-body-sm"
  color="warning"
/>
`;

exports[`<Badge.Label/> should render correctly with size lg 1`] = `
<span
  aria-label="lg Badge"
  class="rounded-[50%] inline-flex items-center justify-center font-bold text-solid-slate-50 text-center bg-solid-green-700 h-1800 min-w-[36px] text-body-md"
/>
`;

exports[`<Badge.Label/> should render correctly with size md 1`] = `
<span
  aria-label="md Badge"
  class="rounded-[50%] inline-flex items-center justify-center font-bold text-solid-slate-50 text-center bg-solid-green-700 h-1200 min-w-[24px] text-body-sm"
/>
`;

exports[`<Badge.Label/> should render correctly with size sm 1`] = `
<span
  aria-label="sm Badge"
  class="rounded-[50%] inline-flex items-center justify-center font-bold text-solid-slate-50 text-center bg-solid-green-700 h-900 min-w-[18px] text-caption"
/>
`;
